# llama-index

./: .env.example  .gitignore  Makefile  README.md  chatbot.py  docker-compose.yml  pyproject.toml  setup.sh  start_services.sh  streamlit_app.py  test_services.py
data/: sample_data.txt  sample_data_case_studies.txt  sample_data_company.txt  sample_data_faq.txt  sample_data_product.txt  sample_data_research.txt  sample_data_tutorials.txt
