[tool.poetry]
name = "weaviate"
version = "0.1.0"
description = ""
authors = ["Leonardo Pratesi <leonardo.pratesi@outsystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.12.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
streamlit = "^1.28.0"
sentence-transformers = "^2.2.2"
torch = "^2.0.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-vector-stores-weaviate = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false